--- a/package.json
+++ b/package.json
@@ -3,7 +3,18 @@
   "main": "./lib/require",
   "version": "0.1.5",
   "description": "A import js package quickily using file path",
-  "keywords": [],
+  "keywords": [
+  "autocomplete",
+  "autocomplete-plus",
+  "fuzzy",
+  "atom",
+  "es6",
+  "es2015",
+  "import",
+  "vue",
+  "js import",
+  "js module"
+],
   "activationCommands": {
     "atom-workspace": "require:toggle"
   },
