--- a/package.json
+++ b/package.json
@@ -4,16 +4,32 @@
   "version": "1.0.2",
   "description": "A import js package quickily using file path",
   "keywords": [
-    "autocomplete",
-    "autocomplete-plus",
-    "fuzzy",
-    "atom",
+    "vue",
     "es6",
+    "atom",
+    "fuzzy",
     "es2015",
     "import",
-    "vue",
+    "js module",
     "js import",
-    "js module"
+    "vue import",
+    "autocomplete",
+    "import module",
+    "module import",
+    "import modules",
+    "imports module",
+    "modules import",
+    "module imports",
+    "js module import",
+    "js module imports",
+    "vue module import",
+    "js modules import",
+    "autocomplete-plus",
+    "vue modules import",
+    "vue module imports",
+    "javascript module import",
+    "javascript modules import",
+    "javascript module imports",
   ],
   "activationCommands": {
     "atom-workspace": "require:toggle"
